@@ -1,5 +1,6 @@
 Version 2.7.0
 -------------
+94. [workshop] Create test code for Google Camera and OpenCamera
 81. Add section about problems with starting emulators to troubleshooting
 78. Fix Windows logging to file
 74. Create install scripts for Linux, MacOS, and Windows
